--- a/index.css
+++ b/index.css
@@ -3,12 +3,35 @@
     src: url("src/lemonmilk.otf") format("opentype");
 }
 
+.begone {
+	opacity: 0;
+}
+
 body {
 	background: black;
 }
 
+body::before {
+    content: "";
+    background: url("src/newbg.png") no-repeat center center;
+    background-size: cover;
+    opacity: 0;
+	box-shadow: inset 0 0 5em 1em #000;
+    transition: opacity 2s linear;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+body.bg-active::before {
+    opacity: 1;
+}
+
 ::-moz-selection { /* Code for Firefox */
-  background: yellow;
+  background: rgba(225,127,230,0.3);
 }
 
 ::selection {
@@ -28,6 +51,11 @@ body {
     -webkit-text-fill-color: transparent;
     background-position: 500px 500px;
 	font-family: LemonMilk;
+}
+
+.coloredtxt-active {
+	background-image: none;
+	background-color: rgb(14, 14, 14);
 }
 
 .text {
@@ -50,8 +78,8 @@ body {
 }
 
 .simg {
-	filter: blur(4px) grayscale(100%);
-  	-webkit-filter: blur(4px) grayscale(100%);
+	filter: blur(2px) grayscale(100%);
+  	-webkit-filter: blur(2px) grayscale(100%);
   	transition-duration: 0.3s;
 }
 
@@ -75,4 +103,5 @@ body {
 
 .secret {
 	color: black;
+	transition: opacity 1s linear;
 }
