--- a/index.css
+++ b/index.css
@@ -228,3 +228,37 @@ a {
 .footer-text {
     color: #555;
 }
+
+/* GAME */
+#game {
+    position: absolute;
+    z-index: -9999;
+}
+
+.game-infobox {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.game-infobox span {
+    color: white;
+    background-color: #2d2d2d;
+    padding: 32px;
+    border-radius: 8px;
+}
+
+.game-infobox button {
+    background-color: #503050;
+    border: 1px solid #c906ff;
+    border-radius: 8px;
+    outline: none;
+    color: white;
+    padding: 8px;
+    cursor: pointer;
+    margin-top: 8px;
+}
